<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/txtNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/txtNum1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtNum1"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtNum2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNum1" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtNum2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/displayCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/displayCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNum2" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:onClick="add"
        android:text="@string/addBtn"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/substractBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/displayCalc" />

    <Button
        android:id="@+id/substractBtn"
        android:layout_width="86dp"
        android:layout_height="49dp"
        android:layout_marginTop="64dp"
        android:onClick="subtract"
        android:text="@string/substractBtn"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addBtn"
        app:layout_constraintTop_toTopOf="@+id/displayCalc" />

    <Button
        android:id="@+id/muliplyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="multiply"
        android:text="@string/muliplyBtn"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/divisionBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBtn" />

    <Button
        android:id="@+id/divisionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="divide"
        android:text="@string/divisionBtn"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/muliplyBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/muliplyBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>